--- a/Python/Análise de Sobrevivência em Telecom.ipynb
+++ b/Python/Análise de Sobrevivência em Telecom.ipynb
@@ -11,6 +11,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Introdução\n",
+    "\n",
     "Um dos assuntos mais recorrentes em qualquer tipo de serviço de assinatura é como reduzir o Churn, dado que conquistar novos clientes é bem [mais difícil (e caro) do que manter os antigos](https://hbr.org/2014/10/the-value-of-keeping-the-right-customers/). \n",
     "\n",
     "Cerca de 70% das empresas sabem que é mais barato manter um cliente do que ter que [ir atrás de um novo](http://oursocialtimes.com/70-of-companies-say-its-cheaper-to-retain-a-customer-than-acquire-one/).\n",
@@ -23,7 +25,9 @@
     "\n",
     "Sendo assim, qualquer mecanismo ou mesmo esforço para minimizar esse efeito é de grande valia. Nos baseamos na teoria estatística buscar respostas para a pergunta: Como diminuir o Churn? Como identificar um potencial cliente que irá entrar em uma situação de Churn? Quais estratégias seguir para minimizar esse Churn? Quais réguas de comunicação com os clientes devemos ter para entender os motivos que estão fazendo um assinante cancelar o serviço e quais são as estratégias de [customer winback](https://www.amazon.com/Customer-Winback-Recapture-Customers-Loyal/dp/0787946672) possíveis nesse cenário?\n",
     "\n",
-    "E pra responder essa pergunta, fomos buscar as respostas na análise de sobrevivência dado que essa área da estatística é uma das que lidam melhor em termos de probabilidade de tempo de vida, seja de materiais (e.g. tempo de falha de algum sistema mecânico), no tempo de vida de pessoas propriamente ditas (e.g. dado uma determinada posologia qual é a estimativa de um paciente sobreviver a um câncer), e no nosso caso quanto tempo de vida um assinante tem até deixar cancelar a sua assinatura. \n",
+    "E pra responder essa pergunta, fomos buscar as respostas na análise de sobrevivência dado que essa área da estatística é uma das que lidam melhor em termos de probabilidade de tempo de vida, seja de materiais (e.g. tempo de falha de algum sistema mecânico), no tempo de vida de pessoas propriamente ditas (e.g. dado uma determinada posologia qual é a estimativa de um paciente sobreviver a um câncer), e no nosso caso quanto tempo de vida um assinante tem até deixar cancelar a sua assinatura.\n",
+    "\n",
+    "## Análise de Sobrevivência\n",
     "\n",
     "A análise de sobreviência é uma técnica estatístisca que foi desenvolvida na medicina e tem como principal finalidade estimar o tempo de sobrevivência ou tempo de morte de um determinado paciente dentro de um horizonte do tempo. \n",
     "\n",
@@ -48,7 +52,7 @@
     "No nosso caso o tempo de falha ou tempo de morte, como estamos falando de serviços de assinaturas, o nosso evento de interesse seria o churn, ou cancelamento da assinatura. Em outras palavras teríamos algo do tipo Time-to-Churn. Guardem esse termo.  \n",
     "\n",
     "\n",
-    "Metodologia\n",
+    "## Metodologia\n",
     "\n",
     "Usamos dados de dois produtos antigos em que os dados foram anonimizados e aplicados um hash de embaralhamento uniforme (que obedece uma distribuição específica) nos atributos por questões de privacidade, que são:\n",
     "\n",
@@ -705,13 +709,13 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "Conclusão"
+   ]
   }
  ],
  "metadata": {
