--- a/Courses and Tutorials/Udacity - Nanodegree - Deep Learning/Lesson 2 - Sentment Analysis/sentiment_network/Sentiment Classification - Mini Project 1.ipynb
+++ b/Courses and Tutorials/Udacity - Nanodegree - Deep Learning/Lesson 2 - Sentment Analysis/sentiment_network/Sentiment Classification - Mini Project 1.ipynb
@@ -261,6 +261,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Project 1: Quick Theory Validation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from collections import Counter\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "positive_counts = Counter()\n",
+    "negative_counts = Counter()\n",
+    "total_counts = Counter()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
