Include momentum indicator

--- a/Python/Yahoo Finance Algo Trading Weekly.ipynb
+++ b/Python/Yahoo Finance Algo Trading Weekly.ipynb
@@ -403,98 +403,108 @@
     "    Exponential Moving Average\n",
     "    \"\"\"\n",
     "    result=pd.Series(pd.ewma(df['Close'], span=n, min_periods=n - 1), name='EMA_' + str(n))\n",
+    "    #Series.ewm(ignore_na=False,span=15,min_periods=14,adjust=True).mean()\n",
     "    return (result)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def MOM(df, n):\n",
+    "    \"\"\"\n",
+    "    Momentum\n",
+    "    \"\"\"\n",
+    "    result=pd.Series(df['Close'].diff(n), name='Momentum_' + str(n))\n",
+    "    return (result)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python2.7/site-packages/ipykernel/__main__.py:5: FutureWarning: pd.ewm_mean is deprecated for Series and will be removed in a future version, replace with \n",
-      "\tSeries.ewm(ignore_na=False,span=15,min_periods=14,adjust=True).mean()\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "94          NaN\n",
-       "93          NaN\n",
-       "92          NaN\n",
-       "91          NaN\n",
-       "90          NaN\n",
-       "89          NaN\n",
-       "88          NaN\n",
-       "87          NaN\n",
-       "86          NaN\n",
-       "85          NaN\n",
-       "84          NaN\n",
-       "83          NaN\n",
-       "82          NaN\n",
-       "81    15.337914\n",
-       "80    15.352666\n",
-       "79    15.396225\n",
-       "78    15.431602\n",
-       "77    15.461615\n",
-       "76    15.548267\n",
-       "75    15.627733\n",
-       "74    15.677266\n",
-       "73    15.707986\n",
-       "72    15.718736\n",
-       "71    15.747563\n",
-       "70    15.812679\n",
-       "69    15.860066\n",
-       "68    15.902460\n",
-       "67    15.946961\n",
-       "66    15.990752\n",
-       "65    16.032671\n",
-       "        ...    \n",
-       "29    17.148169\n",
-       "28    17.208405\n",
-       "27    17.248609\n",
-       "26    17.281286\n",
-       "25    17.252373\n",
-       "24    17.220824\n",
-       "23    17.173218\n",
-       "22    17.139064\n",
-       "21    17.092928\n",
-       "20    17.052560\n",
-       "19    17.060991\n",
-       "18    17.043366\n",
-       "17    17.009194\n",
-       "16    17.000545\n",
-       "15    16.992977\n",
-       "14    17.012605\n",
-       "13    17.042280\n",
-       "12    17.143246\n",
-       "11    17.201591\n",
-       "10    17.263893\n",
-       "9     17.318407\n",
-       "8     17.426107\n",
-       "7     17.579095\n",
-       "6     17.666709\n",
-       "5     17.770871\n",
-       "4     17.862012\n",
-       "3     17.979261\n",
-       "2     18.146854\n",
-       "1     18.335998\n",
-       "0     18.546499\n",
-       "Name: EMA_15, dtype: float64"
+       "94     NaN\n",
+       "93     NaN\n",
+       "92     NaN\n",
+       "91     NaN\n",
+       "90     NaN\n",
+       "89     NaN\n",
+       "88     NaN\n",
+       "87     NaN\n",
+       "86     NaN\n",
+       "85     NaN\n",
+       "84     NaN\n",
+       "83     NaN\n",
+       "82     NaN\n",
+       "81     NaN\n",
+       "80     NaN\n",
+       "79    0.56\n",
+       "78   -0.21\n",
+       "77    0.17\n",
+       "76    0.66\n",
+       "75    0.57\n",
+       "74    0.60\n",
+       "73    0.68\n",
+       "72    0.82\n",
+       "71    0.46\n",
+       "70    1.10\n",
+       "69    1.03\n",
+       "68    0.69\n",
+       "67    0.90\n",
+       "66    0.93\n",
+       "65    0.88\n",
+       "      ... \n",
+       "29    0.64\n",
+       "28    0.79\n",
+       "27    0.60\n",
+       "26    0.64\n",
+       "25    0.19\n",
+       "24   -0.08\n",
+       "23    0.04\n",
+       "22    0.50\n",
+       "21    0.17\n",
+       "20   -0.10\n",
+       "19    0.14\n",
+       "18   -0.31\n",
+       "17   -0.69\n",
+       "16   -0.51\n",
+       "15   -0.46\n",
+       "14   -0.34\n",
+       "13   -0.38\n",
+       "12    0.32\n",
+       "11    0.10\n",
+       "10    0.65\n",
+       "9     0.70\n",
+       "8     1.34\n",
+       "7     1.75\n",
+       "6     1.51\n",
+       "5     1.73\n",
+       "4     1.38\n",
+       "3     1.88\n",
+       "2     2.55\n",
+       "1     2.72\n",
+       "0     3.08\n",
+       "Name: Momentum_15, dtype: float64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "EMA(df_wege, n)"
+    "MOM(df_wege, n)"
    ]
   },
   {
