--- a/Python/Yahoo Finance Algo Trading Weekly.ipynb
+++ b/Python/Yahoo Finance Algo Trading Weekly.ipynb
@@ -462,7 +462,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def KELCH(df, n):\n",
+    "    \"\"\"\n",
+    "    Keltner Channel\n",
+    "    \"\"\"\n",
+    "    KelChM = pd.Series(pd.rolling_mean((df['High'] + df['Low'] + df['Close']) / 3, n), name='KelChM_' + str(n))\n",
+    "    KelChU = pd.Series(pd.rolling_mean((4 * df['High'] - 2 * df['Low'] + df['Close']) / 3, n), name='KelChU_' + str(n))\n",
+    "    KelChD = pd.Series(pd.rolling_mean((-2 * df['High'] + 4 * df['Low'] + df['Close']) / 3, n), name='KelChD_' + str(n))\n",
+    "    result = pd.DataFrame([KelChM, KelChU, KelChD]).transpose()\n",
+    "    return (result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -471,83 +490,474 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/usr/local/lib/python2.7/site-packages/ipykernel/__main__.py:5: FutureWarning: pd.rolling_std is deprecated for Series and will be removed in a future version, replace with \n",
-      "\tSeries.rolling(window=15,center=False).std()\n"
+      "/usr/local/lib/python2.7/site-packages/ipykernel/__main__.py:5: FutureWarning: pd.rolling_mean is deprecated for Series and will be removed in a future version, replace with \n",
+      "\tSeries.rolling(window=15,center=False).mean()\n",
+      "/usr/local/lib/python2.7/site-packages/ipykernel/__main__.py:6: FutureWarning: pd.rolling_mean is deprecated for Series and will be removed in a future version, replace with \n",
+      "\tSeries.rolling(window=15,center=False).mean()\n",
+      "/usr/local/lib/python2.7/site-packages/ipykernel/__main__.py:7: FutureWarning: pd.rolling_mean is deprecated for Series and will be removed in a future version, replace with \n",
+      "\tSeries.rolling(window=15,center=False).mean()\n"
      ]
     },
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>KelChM_15</th>\n",
+       "      <th>KelChU_15</th>\n",
+       "      <th>KelChD_15</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>94</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>93</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>92</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>91</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>90</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>89</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>88</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>87</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>86</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>84</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>83</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>82</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>81</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>80</th>\n",
+       "      <td>15.386000</td>\n",
+       "      <td>15.838667</td>\n",
+       "      <td>14.933333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>79</th>\n",
+       "      <td>15.416222</td>\n",
+       "      <td>15.876889</td>\n",
+       "      <td>14.955556</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>78</th>\n",
+       "      <td>15.413333</td>\n",
+       "      <td>15.843333</td>\n",
+       "      <td>14.983333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77</th>\n",
+       "      <td>15.416889</td>\n",
+       "      <td>15.810222</td>\n",
+       "      <td>15.023556</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76</th>\n",
+       "      <td>15.449778</td>\n",
+       "      <td>15.853778</td>\n",
+       "      <td>15.045778</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75</th>\n",
+       "      <td>15.490889</td>\n",
+       "      <td>15.886889</td>\n",
+       "      <td>15.094889</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>74</th>\n",
+       "      <td>15.520667</td>\n",
+       "      <td>15.924667</td>\n",
+       "      <td>15.116667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73</th>\n",
+       "      <td>15.563111</td>\n",
+       "      <td>15.959778</td>\n",
+       "      <td>15.166444</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72</th>\n",
+       "      <td>15.618222</td>\n",
+       "      <td>16.012222</td>\n",
+       "      <td>15.224222</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71</th>\n",
+       "      <td>15.648667</td>\n",
+       "      <td>16.050000</td>\n",
+       "      <td>15.247333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70</th>\n",
+       "      <td>15.710000</td>\n",
+       "      <td>16.108667</td>\n",
+       "      <td>15.311333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69</th>\n",
+       "      <td>15.780222</td>\n",
+       "      <td>16.172889</td>\n",
+       "      <td>15.387556</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>68</th>\n",
+       "      <td>15.828889</td>\n",
+       "      <td>16.201556</td>\n",
+       "      <td>15.456222</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67</th>\n",
+       "      <td>15.877111</td>\n",
+       "      <td>16.254444</td>\n",
+       "      <td>15.499778</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>66</th>\n",
+       "      <td>15.937333</td>\n",
+       "      <td>16.314667</td>\n",
+       "      <td>15.560000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>65</th>\n",
+       "      <td>16.000889</td>\n",
+       "      <td>16.379556</td>\n",
+       "      <td>15.622222</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>17.018444</td>\n",
+       "      <td>17.480444</td>\n",
+       "      <td>16.556444</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>17.062000</td>\n",
+       "      <td>17.511333</td>\n",
+       "      <td>16.612667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>17.107778</td>\n",
+       "      <td>17.570444</td>\n",
+       "      <td>16.645111</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>17.154444</td>\n",
+       "      <td>17.615778</td>\n",
+       "      <td>16.693111</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>17.169778</td>\n",
+       "      <td>17.636444</td>\n",
+       "      <td>16.703111</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>17.160444</td>\n",
+       "      <td>17.620444</td>\n",
+       "      <td>16.700444</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>17.165333</td>\n",
+       "      <td>17.618667</td>\n",
+       "      <td>16.712000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>17.196444</td>\n",
+       "      <td>17.639111</td>\n",
+       "      <td>16.753778</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>17.209333</td>\n",
+       "      <td>17.636667</td>\n",
+       "      <td>16.782000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>17.206444</td>\n",
+       "      <td>17.610444</td>\n",
+       "      <td>16.802444</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>17.214222</td>\n",
+       "      <td>17.637556</td>\n",
+       "      <td>16.790889</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>17.204444</td>\n",
+       "      <td>17.629778</td>\n",
+       "      <td>16.779111</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>17.169333</td>\n",
+       "      <td>17.600667</td>\n",
+       "      <td>16.738000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>17.132222</td>\n",
+       "      <td>17.551556</td>\n",
+       "      <td>16.712889</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>17.099333</td>\n",
+       "      <td>17.473333</td>\n",
+       "      <td>16.725333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>17.077111</td>\n",
+       "      <td>17.437778</td>\n",
+       "      <td>16.716444</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>17.053778</td>\n",
+       "      <td>17.415111</td>\n",
+       "      <td>16.692444</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>17.056889</td>\n",
+       "      <td>17.440889</td>\n",
+       "      <td>16.672889</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>17.065111</td>\n",
+       "      <td>17.449778</td>\n",
+       "      <td>16.680444</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>17.096889</td>\n",
+       "      <td>17.465556</td>\n",
+       "      <td>16.728222</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>17.143111</td>\n",
+       "      <td>17.493111</td>\n",
+       "      <td>16.793111</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>17.216444</td>\n",
+       "      <td>17.577111</td>\n",
+       "      <td>16.855778</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>17.327333</td>\n",
+       "      <td>17.716000</td>\n",
+       "      <td>16.938667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>17.429556</td>\n",
+       "      <td>17.838889</td>\n",
+       "      <td>17.020222</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>17.540667</td>\n",
+       "      <td>17.976000</td>\n",
+       "      <td>17.105333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>17.640667</td>\n",
+       "      <td>18.069333</td>\n",
+       "      <td>17.212000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>17.763778</td>\n",
+       "      <td>18.201778</td>\n",
+       "      <td>17.325778</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>17.921333</td>\n",
+       "      <td>18.352667</td>\n",
+       "      <td>17.490000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>18.101111</td>\n",
+       "      <td>18.555778</td>\n",
+       "      <td>17.646444</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>18.305111</td>\n",
+       "      <td>18.787778</td>\n",
+       "      <td>17.822444</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>95 rows × 3 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "94         NaN\n",
-       "93         NaN\n",
-       "92         NaN\n",
-       "91         NaN\n",
-       "90         NaN\n",
-       "89         NaN\n",
-       "88         NaN\n",
-       "87         NaN\n",
-       "86         NaN\n",
-       "85         NaN\n",
-       "84         NaN\n",
-       "83         NaN\n",
-       "82         NaN\n",
-       "81         NaN\n",
-       "80    0.220612\n",
-       "79    0.219885\n",
-       "78    0.193829\n",
-       "77    0.204241\n",
-       "76    0.272994\n",
-       "75    0.326260\n",
-       "74    0.351308\n",
-       "73    0.354793\n",
-       "72    0.317382\n",
-       "71    0.324818\n",
-       "70    0.327388\n",
-       "69    0.305213\n",
-       "68    0.309596\n",
-       "67    0.294557\n",
-       "66    0.269430\n",
-       "65    0.241893\n",
-       "        ...   \n",
-       "29    0.328774\n",
-       "28    0.360119\n",
-       "27    0.376412\n",
-       "26    0.383470\n",
-       "25    0.376181\n",
-       "24    0.378040\n",
-       "23    0.375451\n",
-       "22    0.321176\n",
-       "21    0.301009\n",
-       "20    0.309988\n",
-       "19    0.304936\n",
-       "18    0.313858\n",
-       "17    0.321818\n",
-       "16    0.313949\n",
-       "15    0.305891\n",
-       "14    0.285127\n",
-       "13    0.244466\n",
-       "12    0.299027\n",
-       "11    0.310848\n",
-       "10    0.352120\n",
-       "9     0.382695\n",
-       "8     0.455054\n",
-       "7     0.571613\n",
-       "6     0.593824\n",
-       "5     0.618691\n",
-       "4     0.648762\n",
-       "3     0.676062\n",
-       "2     0.720914\n",
-       "1     0.785734\n",
-       "0     0.849764\n",
-       "Name: STD_15, dtype: float64"
+       "    KelChM_15  KelChU_15  KelChD_15\n",
+       "94        NaN        NaN        NaN\n",
+       "93        NaN        NaN        NaN\n",
+       "92        NaN        NaN        NaN\n",
+       "91        NaN        NaN        NaN\n",
+       "90        NaN        NaN        NaN\n",
+       "89        NaN        NaN        NaN\n",
+       "88        NaN        NaN        NaN\n",
+       "87        NaN        NaN        NaN\n",
+       "86        NaN        NaN        NaN\n",
+       "85        NaN        NaN        NaN\n",
+       "84        NaN        NaN        NaN\n",
+       "83        NaN        NaN        NaN\n",
+       "82        NaN        NaN        NaN\n",
+       "81        NaN        NaN        NaN\n",
+       "80  15.386000  15.838667  14.933333\n",
+       "79  15.416222  15.876889  14.955556\n",
+       "78  15.413333  15.843333  14.983333\n",
+       "77  15.416889  15.810222  15.023556\n",
+       "76  15.449778  15.853778  15.045778\n",
+       "75  15.490889  15.886889  15.094889\n",
+       "74  15.520667  15.924667  15.116667\n",
+       "73  15.563111  15.959778  15.166444\n",
+       "72  15.618222  16.012222  15.224222\n",
+       "71  15.648667  16.050000  15.247333\n",
+       "70  15.710000  16.108667  15.311333\n",
+       "69  15.780222  16.172889  15.387556\n",
+       "68  15.828889  16.201556  15.456222\n",
+       "67  15.877111  16.254444  15.499778\n",
+       "66  15.937333  16.314667  15.560000\n",
+       "65  16.000889  16.379556  15.622222\n",
+       "..        ...        ...        ...\n",
+       "29  17.018444  17.480444  16.556444\n",
+       "28  17.062000  17.511333  16.612667\n",
+       "27  17.107778  17.570444  16.645111\n",
+       "26  17.154444  17.615778  16.693111\n",
+       "25  17.169778  17.636444  16.703111\n",
+       "24  17.160444  17.620444  16.700444\n",
+       "23  17.165333  17.618667  16.712000\n",
+       "22  17.196444  17.639111  16.753778\n",
+       "21  17.209333  17.636667  16.782000\n",
+       "20  17.206444  17.610444  16.802444\n",
+       "19  17.214222  17.637556  16.790889\n",
+       "18  17.204444  17.629778  16.779111\n",
+       "17  17.169333  17.600667  16.738000\n",
+       "16  17.132222  17.551556  16.712889\n",
+       "15  17.099333  17.473333  16.725333\n",
+       "14  17.077111  17.437778  16.716444\n",
+       "13  17.053778  17.415111  16.692444\n",
+       "12  17.056889  17.440889  16.672889\n",
+       "11  17.065111  17.449778  16.680444\n",
+       "10  17.096889  17.465556  16.728222\n",
+       "9   17.143111  17.493111  16.793111\n",
+       "8   17.216444  17.577111  16.855778\n",
+       "7   17.327333  17.716000  16.938667\n",
+       "6   17.429556  17.838889  17.020222\n",
+       "5   17.540667  17.976000  17.105333\n",
+       "4   17.640667  18.069333  17.212000\n",
+       "3   17.763778  18.201778  17.325778\n",
+       "2   17.921333  18.352667  17.490000\n",
+       "1   18.101111  18.555778  17.646444\n",
+       "0   18.305111  18.787778  17.822444\n",
+       "\n",
+       "[95 rows x 3 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "KELCH(df_wege, n)"
+   ]
   },
   {
    "cell_type": "code",
