Commodity Channel Index indicator

--- a/Python/Yahoo Finance Algo Trading Weekly.ipynb
+++ b/Python/Yahoo Finance Algo Trading Weekly.ipynb
@@ -481,7 +481,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def CCI(df, n):\n",
+    "    \"\"\"\n",
+    "    Commodity Channel Index\n",
+    "    \"\"\"\n",
+    "    PP = (df['High'] + df['Low'] + df['Close']) / 3\n",
+    "    result = pd.Series((PP - pd.rolling_mean(PP, n)) / pd.rolling_std(PP, n), name='CCI_' + str(n))\n",
+    "    return (result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -490,473 +507,86 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/usr/local/lib/python2.7/site-packages/ipykernel/__main__.py:5: FutureWarning: pd.rolling_mean is deprecated for Series and will be removed in a future version, replace with \n",
-      "\tSeries.rolling(window=15,center=False).mean()\n",
       "/usr/local/lib/python2.7/site-packages/ipykernel/__main__.py:6: FutureWarning: pd.rolling_mean is deprecated for Series and will be removed in a future version, replace with \n",
       "\tSeries.rolling(window=15,center=False).mean()\n",
-      "/usr/local/lib/python2.7/site-packages/ipykernel/__main__.py:7: FutureWarning: pd.rolling_mean is deprecated for Series and will be removed in a future version, replace with \n",
-      "\tSeries.rolling(window=15,center=False).mean()\n"
+      "/usr/local/lib/python2.7/site-packages/ipykernel/__main__.py:6: FutureWarning: pd.rolling_std is deprecated for Series and will be removed in a future version, replace with \n",
+      "\tSeries.rolling(window=15,center=False).std()\n"
      ]
     },
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>KelChM_15</th>\n",
-       "      <th>KelChU_15</th>\n",
-       "      <th>KelChD_15</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>94</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>93</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>92</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>91</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>90</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>89</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>88</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>87</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>86</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>85</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>84</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>83</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>82</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>81</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>80</th>\n",
-       "      <td>15.386000</td>\n",
-       "      <td>15.838667</td>\n",
-       "      <td>14.933333</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>79</th>\n",
-       "      <td>15.416222</td>\n",
-       "      <td>15.876889</td>\n",
-       "      <td>14.955556</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>78</th>\n",
-       "      <td>15.413333</td>\n",
-       "      <td>15.843333</td>\n",
-       "      <td>14.983333</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>77</th>\n",
-       "      <td>15.416889</td>\n",
-       "      <td>15.810222</td>\n",
-       "      <td>15.023556</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>76</th>\n",
-       "      <td>15.449778</td>\n",
-       "      <td>15.853778</td>\n",
-       "      <td>15.045778</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75</th>\n",
-       "      <td>15.490889</td>\n",
-       "      <td>15.886889</td>\n",
-       "      <td>15.094889</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>74</th>\n",
-       "      <td>15.520667</td>\n",
-       "      <td>15.924667</td>\n",
-       "      <td>15.116667</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>73</th>\n",
-       "      <td>15.563111</td>\n",
-       "      <td>15.959778</td>\n",
-       "      <td>15.166444</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>72</th>\n",
-       "      <td>15.618222</td>\n",
-       "      <td>16.012222</td>\n",
-       "      <td>15.224222</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>71</th>\n",
-       "      <td>15.648667</td>\n",
-       "      <td>16.050000</td>\n",
-       "      <td>15.247333</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>70</th>\n",
-       "      <td>15.710000</td>\n",
-       "      <td>16.108667</td>\n",
-       "      <td>15.311333</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>69</th>\n",
-       "      <td>15.780222</td>\n",
-       "      <td>16.172889</td>\n",
-       "      <td>15.387556</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>68</th>\n",
-       "      <td>15.828889</td>\n",
-       "      <td>16.201556</td>\n",
-       "      <td>15.456222</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>67</th>\n",
-       "      <td>15.877111</td>\n",
-       "      <td>16.254444</td>\n",
-       "      <td>15.499778</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>66</th>\n",
-       "      <td>15.937333</td>\n",
-       "      <td>16.314667</td>\n",
-       "      <td>15.560000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>65</th>\n",
-       "      <td>16.000889</td>\n",
-       "      <td>16.379556</td>\n",
-       "      <td>15.622222</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>17.018444</td>\n",
-       "      <td>17.480444</td>\n",
-       "      <td>16.556444</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>17.062000</td>\n",
-       "      <td>17.511333</td>\n",
-       "      <td>16.612667</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>17.107778</td>\n",
-       "      <td>17.570444</td>\n",
-       "      <td>16.645111</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>17.154444</td>\n",
-       "      <td>17.615778</td>\n",
-       "      <td>16.693111</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>17.169778</td>\n",
-       "      <td>17.636444</td>\n",
-       "      <td>16.703111</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>17.160444</td>\n",
-       "      <td>17.620444</td>\n",
-       "      <td>16.700444</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>17.165333</td>\n",
-       "      <td>17.618667</td>\n",
-       "      <td>16.712000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>17.196444</td>\n",
-       "      <td>17.639111</td>\n",
-       "      <td>16.753778</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>17.209333</td>\n",
-       "      <td>17.636667</td>\n",
-       "      <td>16.782000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>17.206444</td>\n",
-       "      <td>17.610444</td>\n",
-       "      <td>16.802444</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>17.214222</td>\n",
-       "      <td>17.637556</td>\n",
-       "      <td>16.790889</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>17.204444</td>\n",
-       "      <td>17.629778</td>\n",
-       "      <td>16.779111</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>17.169333</td>\n",
-       "      <td>17.600667</td>\n",
-       "      <td>16.738000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>17.132222</td>\n",
-       "      <td>17.551556</td>\n",
-       "      <td>16.712889</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>17.099333</td>\n",
-       "      <td>17.473333</td>\n",
-       "      <td>16.725333</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>17.077111</td>\n",
-       "      <td>17.437778</td>\n",
-       "      <td>16.716444</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>17.053778</td>\n",
-       "      <td>17.415111</td>\n",
-       "      <td>16.692444</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>17.056889</td>\n",
-       "      <td>17.440889</td>\n",
-       "      <td>16.672889</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>17.065111</td>\n",
-       "      <td>17.449778</td>\n",
-       "      <td>16.680444</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>17.096889</td>\n",
-       "      <td>17.465556</td>\n",
-       "      <td>16.728222</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>17.143111</td>\n",
-       "      <td>17.493111</td>\n",
-       "      <td>16.793111</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>17.216444</td>\n",
-       "      <td>17.577111</td>\n",
-       "      <td>16.855778</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>17.327333</td>\n",
-       "      <td>17.716000</td>\n",
-       "      <td>16.938667</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>17.429556</td>\n",
-       "      <td>17.838889</td>\n",
-       "      <td>17.020222</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>17.540667</td>\n",
-       "      <td>17.976000</td>\n",
-       "      <td>17.105333</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>17.640667</td>\n",
-       "      <td>18.069333</td>\n",
-       "      <td>17.212000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>17.763778</td>\n",
-       "      <td>18.201778</td>\n",
-       "      <td>17.325778</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>17.921333</td>\n",
-       "      <td>18.352667</td>\n",
-       "      <td>17.490000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>18.101111</td>\n",
-       "      <td>18.555778</td>\n",
-       "      <td>17.646444</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>18.305111</td>\n",
-       "      <td>18.787778</td>\n",
-       "      <td>17.822444</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>95 rows × 3 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "    KelChM_15  KelChU_15  KelChD_15\n",
-       "94        NaN        NaN        NaN\n",
-       "93        NaN        NaN        NaN\n",
-       "92        NaN        NaN        NaN\n",
-       "91        NaN        NaN        NaN\n",
-       "90        NaN        NaN        NaN\n",
-       "89        NaN        NaN        NaN\n",
-       "88        NaN        NaN        NaN\n",
-       "87        NaN        NaN        NaN\n",
-       "86        NaN        NaN        NaN\n",
-       "85        NaN        NaN        NaN\n",
-       "84        NaN        NaN        NaN\n",
-       "83        NaN        NaN        NaN\n",
-       "82        NaN        NaN        NaN\n",
-       "81        NaN        NaN        NaN\n",
-       "80  15.386000  15.838667  14.933333\n",
-       "79  15.416222  15.876889  14.955556\n",
-       "78  15.413333  15.843333  14.983333\n",
-       "77  15.416889  15.810222  15.023556\n",
-       "76  15.449778  15.853778  15.045778\n",
-       "75  15.490889  15.886889  15.094889\n",
-       "74  15.520667  15.924667  15.116667\n",
-       "73  15.563111  15.959778  15.166444\n",
-       "72  15.618222  16.012222  15.224222\n",
-       "71  15.648667  16.050000  15.247333\n",
-       "70  15.710000  16.108667  15.311333\n",
-       "69  15.780222  16.172889  15.387556\n",
-       "68  15.828889  16.201556  15.456222\n",
-       "67  15.877111  16.254444  15.499778\n",
-       "66  15.937333  16.314667  15.560000\n",
-       "65  16.000889  16.379556  15.622222\n",
-       "..        ...        ...        ...\n",
-       "29  17.018444  17.480444  16.556444\n",
-       "28  17.062000  17.511333  16.612667\n",
-       "27  17.107778  17.570444  16.645111\n",
-       "26  17.154444  17.615778  16.693111\n",
-       "25  17.169778  17.636444  16.703111\n",
-       "24  17.160444  17.620444  16.700444\n",
-       "23  17.165333  17.618667  16.712000\n",
-       "22  17.196444  17.639111  16.753778\n",
-       "21  17.209333  17.636667  16.782000\n",
-       "20  17.206444  17.610444  16.802444\n",
-       "19  17.214222  17.637556  16.790889\n",
-       "18  17.204444  17.629778  16.779111\n",
-       "17  17.169333  17.600667  16.738000\n",
-       "16  17.132222  17.551556  16.712889\n",
-       "15  17.099333  17.473333  16.725333\n",
-       "14  17.077111  17.437778  16.716444\n",
-       "13  17.053778  17.415111  16.692444\n",
-       "12  17.056889  17.440889  16.672889\n",
-       "11  17.065111  17.449778  16.680444\n",
-       "10  17.096889  17.465556  16.728222\n",
-       "9   17.143111  17.493111  16.793111\n",
-       "8   17.216444  17.577111  16.855778\n",
-       "7   17.327333  17.716000  16.938667\n",
-       "6   17.429556  17.838889  17.020222\n",
-       "5   17.540667  17.976000  17.105333\n",
-       "4   17.640667  18.069333  17.212000\n",
-       "3   17.763778  18.201778  17.325778\n",
-       "2   17.921333  18.352667  17.490000\n",
-       "1   18.101111  18.555778  17.646444\n",
-       "0   18.305111  18.787778  17.822444\n",
-       "\n",
-       "[95 rows x 3 columns]"
+       "94         NaN\n",
+       "93         NaN\n",
+       "92         NaN\n",
+       "91         NaN\n",
+       "90         NaN\n",
+       "89         NaN\n",
+       "88         NaN\n",
+       "87         NaN\n",
+       "86         NaN\n",
+       "85         NaN\n",
+       "84         NaN\n",
+       "83         NaN\n",
+       "82         NaN\n",
+       "81         NaN\n",
+       "80   -0.110415\n",
+       "79    1.050437\n",
+       "78    1.257179\n",
+       "77    1.378168\n",
+       "76    2.330050\n",
+       "75    2.356475\n",
+       "74    1.423160\n",
+       "73    1.169109\n",
+       "72    0.830216\n",
+       "71    0.927394\n",
+       "70    1.489513\n",
+       "69    1.513932\n",
+       "68    1.107762\n",
+       "67    0.909631\n",
+       "66    1.089612\n",
+       "65    1.340526\n",
+       "        ...   \n",
+       "29    1.439549\n",
+       "28    1.516103\n",
+       "27    1.378376\n",
+       "26    1.092960\n",
+       "25    0.000622\n",
+       "24   -0.427772\n",
+       "23   -0.671379\n",
+       "22   -0.774414\n",
+       "21   -1.354479\n",
+       "20   -1.495241\n",
+       "19   -0.551332\n",
+       "18   -0.836700\n",
+       "17   -1.135226\n",
+       "16   -0.751132\n",
+       "15   -0.545942\n",
+       "14    0.143591\n",
+       "13    0.638266\n",
+       "12    2.311279\n",
+       "11    2.245721\n",
+       "10    1.777718\n",
+       "9     1.616017\n",
+       "8     1.992173\n",
+       "7     2.408223\n",
+       "6     1.599068\n",
+       "5     1.489443\n",
+       "4     1.433757\n",
+       "3     1.544474\n",
+       "2     1.770447\n",
+       "1     1.931802\n",
+       "0     1.995544\n",
+       "Name: CCI_15, dtype: float64"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "KELCH(df_wege, n)"
+    "CCI(df_wege, n)"
    ]
   },
   {
